--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Health Checkout
+      - name: Health 
         run: |
           yarn install
           yarn start &
-          curl http://localhost:3010/hello
+          curl http://127.0.0.1:3010/hello
       - name: Done 
         run: |
           echo "Yaay!"
